Add pieces list

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ APP_SECRET=cecb008133d359294e21a57bd1aa554f
 
 DATABASE_URL=
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+
+REBRICKABLE_API_KEY=
