--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,7 @@ services:
     # please note that last definitions always *replace* previous ones
 
     ColorContrast\ColorContrast: ~
+
+    App\Client\RebrickableClient:
+        arguments:
+            $userToken: '%env(REBRICKABLE_API_USER_TOKEN)%'
