--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -17,3 +17,8 @@ framework:
         # Namespaced pools use the above "app" backend by default
         #pools:
             #my.dedicated.cache: null
+
+        pools:
+            pick_a_brick_cache:
+                adapter: cache.adapter.filesystem
+                default_lifetime: 86400
